recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if (steps==0){
   	recule(length)
    gauche(angle)
    tree(steps,length,angle,shrink)
  }
  else {
    if(steps==0){
      
    }
  	avance(length)
  	droite(angle)
  	current(steps)
  	tree(steps-1,length*shrink,angle,shrink)
    recule()
  }
  	
  	
 
}